# resumageddon

./: README.md  main.py  pyproject.toml
src/resumageddon/api/: abstract_api.py  base_api.py  hh_api.py
src/resumageddon/models/: vacancy.py
src/resumageddon/storage/: base_storage.py  json_saver.py
src/resumageddon/utils/: debug_loader.py  filtering.py
tests/: test_filtering.py  test_hh_api.py  test_json_saver.py  test_vacancy.py
