[tool.poetry]
name = "resumageddon"
version = "0.1.0"
description = "Интеграция с внешним сервисом в рамках учебного проекта"
authors = ["GuyMonagan <werevalkury@gmail.com>"]
readme = "README.md"
packages = [
    { include = "resumageddon", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
